--- a/footballsite/club/templates/club.html
+++ b/footballsite/club/templates/club.html
@@ -1,14 +1,7 @@
-<html>
-<head>
-	<title>
-		Example Django
-	</title>
-</head>
+{% extends "base.htm" %}
 
-<body>
-	
+
+{% block content %}
 	<h1> <img width="50px" height ="px" src = "{{club.image_url}}"/> {{club.name}}</h1>
 	<p> {{club.description}}</p>
-</body>
-
-</html>
+{% endblock %}
