--- a/footballsite/templates/base.htm
+++ b/footballsite/templates/base.htm
@@ -1,4 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+{% load static %}
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -135,7 +136,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* this changes the background
 <body>
 
 <div class="container">
-  <div class="header"><a href="#"><img src="" alt="Insert Logo Here" name="Insert_logo" width="180" height="90" id="Insert_logo" style="background-color: #C6D580; display:block;" /></a> 
+  <div class="header"><a href="#"><img src="{% static 'images/iu.jpg' %}" alt="Insert Logo Here" name="Insert_logo" width="180" height="90" id="Insert_logo" style="background-color: #C6D580; display:block;" /></a>
     <!-- end .header --></div>
   <div class="sidebar1">
     <ul class="nav">
