--- a/footballsite/club/templates/clubs.html
+++ b/footballsite/club/templates/clubs.html
@@ -15,7 +15,10 @@
 }
 </style>
 <div class="item">
-<h2> <img width="50px" height ="px" src = "{{club.image_url}}"/> <a  href='/club/get/{{club.id}}/'> {{club.name}} </a> </h2>
+    <h2>
+        <img width="50px" height ="px" src = "{{club.image_url}}"/>
+        <a  href='/club/get/{{club.id}}/'> {{club.name}} </a>
+    </h2>
     <p> {{club.description|lower|truncatewords:"10"}} </p>
 </div>
 {% endfor %}
